# python_agent

./: .env  dev_crew.py  pyproject.toml  requirements.txt  response.py
src/python_agent/: __init__.py
src/python_agent/config/: agents.yaml  tasks.yaml
