[project]
name = "python-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Shehroz Hanif", email = "shehrozhanif54@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "crewai>=0.105.0",
    "streamlit>=1.43.2",
]

[project.scripts]
python-agent = "python_agent:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
